--- a/rooms-app/package.json
+++ b/rooms-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon -e hbs,js server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
